--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- Header & Model 3 -->
   <div
-    class="bg-[url('https://tesla-cdn.thron.com/delivery/public/image/tesla/03e533bf-8b1d-463f-9813-9a597aafb280/bvlatuR/std/4096x2560/M3-Homepage-Desktop-LHD')] h-screen bg-center bg-cover">
+    class="relative bg-[url('https://tesla-cdn.thron.com/delivery/public/image/tesla/03e533bf-8b1d-463f-9813-9a597aafb280/bvlatuR/std/4096x2560/M3-Homepage-Desktop-LHD')] h-screen bg-center bg-cover">
     <div class="pt-5 flex justify-between font-bold items-center">
       <div class="ml-8">
         <svg class="w-32 cursor-pointer" viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg">
@@ -49,6 +49,21 @@
           <li class="cursor-pointer hover:rounded-full hover:bg-slate-300 py-1 px-3">Account</li>
           <li class="cursor-pointer hover:rounded-full hover:bg-slate-300 py-1 px-3">Menu</li>
         </ul>
+      </div>
+      <div class="flex flex-col absolute top-20 left-[50%] translate-x-[-50%]">
+        <h1 class="text-[40px] m-auto font-bold">Model 3</h1>
+        <p class="whitespace-nowrap pt-1 text-[16px] text-[#5c5d61]">Order Online for
+          <span class="underline underline-offset-4 hover:decoration-2 cursor-pointer">Touchless Delivery</span>
+        </p>
+      </div>
+      <div class="absolute bottom-[80px] left-[50%] translate-x-[-50%]">
+        <button class="uppercase bg-gray-800 w-96 text-white rounded-full h-10">Custom order</button>
+        <button class="mt-2 uppercase bg-slate-200 w-96 text-gray-900 rounded-full h-10">Existing Inventory</button>
+      </div>
+      <div class="absolute left-[50%] translate-x-[-50%] bottom-3">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-7 animate-bounce">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+        </svg>        
       </div>
     </div>
   </div>
