--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" href="../dist/output.css" />
+    <link rel="stylesheet" href="dist/output.css" />
   </head>
   <body>
     <div id="sideNav" class="side-nav">
